collectd (4.6.3-1~bpo50+1) lenny-backports; urgency=low

  * Rebuild for lenny-backports.

 -- Sebastian Harl <tokkee@debian.org>  Sun, 14 Jun 2009 16:20:23 +0200

collectd (4.6.3-1~bpo40+1) etch-backports; urgency=low

  * Rebuild for etch-backports.
  * debian/control:
    - Removed dpkg-dev build-dependency - we don't care about Vcs-* and
      Homepage fields in backports.org.
    - Removed optional build-dependencies libcurl4-gnutls-dev, librrd-dev and
      libsnmp-dev - they are not available in Etch and might confuse buildds.
    - Switch back to build-depend on nut-dev - libupsclient1-dev is not
      available in Etch and limit the "nut" plugin to [!alpha !amd64 !hppa
      !ia64 !ppc64 !mips !mipsel].
    - Replaced linux-libc-dev build-dependency with linux-kernel-headers.
    - Build-conflict with iptables-dev to force the use of the shipped libiptc
      (this allows building the iptables plugin on all architectures).
  * debian/control, debian/rules:
    - Added a work around for #474087 (broken openipmi .pc files) by providing
      a fixed version of OpenIPMIpthread.pc in debian/pkgconfig and adding
      that path to PKG_CONFIG_PATH. Removed the version from the
      libopenipmi-dev build dependency - Etch does not include a fixed version
      of openipmi.
    - Removed libdbi0-dev build-dependency and disabled the "dbi" plugin -
      libdbi is not available on Etch.

 -- Sebastian Harl <tokkee@debian.org>  Sun, 14 Jun 2009 13:52:04 +0200

collectd (4.6.3-1) unstable; urgency=low

  * New upstream release.
  * debian/patches:
    - Removed battery_acpi_complain.dpatch - included upstream.
    - Removed include_empty_files.dpatch - included upstream.
    - Removed ntpd_type_pun_fix.dpatch - included upstream.
    - Removed rrdtool_uninitialized_fix.dpatch - included upstream.
    - Added libcollectdclient_static_sstrerror.dpatch to make a private
      function in libcollectdclient static.
  * debian/rules: