@@ -36,6 +36,7 @@ LoadPlugin cpu
 #LoadPlugin cpufreq
 #LoadPlugin csv
 #LoadPlugin curl
+#LoadPlugin dbi
 LoadPlugin df
 LoadPlugin disk
 #LoadPlugin dns
@@ -143,6 +144,29 @@ LoadPlugin users
 #			Instance "AMD"
 #		</Match>
 #	</Page>
+#</Plugin>
+
+#<Plugin dbi>
+#	<Query "num_of_customers">
+#		Statement "SELECT 'customers' AS c_key, COUNT(*) AS c_value \
+#				FROM customers_tbl"
+#		<Result>
+#			Type "gauge"
+#			InstancesFrom "c_key"
+#			ValuesFrom "c_value"
+#		</Result>
+#	</Query>
+#
+#	<Database "customers_db">
+#		Driver "mysql"
+#		DriverOption "host" "localhost"
+#		DriverOption "username" "collectd"
+#		DriverOption "password" "secret"
+#		DriverOption "dbname" "custdb0"
+#		#SelectDB "custdb0"
+#		Query "num_of_customers"
+#		#Query "..."
+#	</Database>
 #</Plugin>
 
 #<Plugin df>
