@@ -2,7 +2,7 @@ Source: collectd
 Section: utils
 Priority: optional
 Maintainer: Sebastian Harl <tokkee@debian.org>
-Build-Depends: debhelper (>= 5), po-debconf, dpatch, bison, flex, autotools-dev, pkg-config, linux-kernel-headers, libcurl3-gnutls-dev, libmysqlclient15-dev, librrd2-dev, libsensors-dev, liboping-dev (>= 0.3.3), libpcap0.8-dev | libpcap-dev, nut-dev [!alpha !amd64 !hppa !ia64 !ppc64 !mips !mipsel], libperl-dev, iproute-dev [!alpha !amd64 !hppa !ia64 !ppc64 !mips !mipsel], libsnmp9-dev, libvirt-dev (>= 0.4.0-6) [amd64 i386 powerpc], libxml2-dev, libhal-dev, libopenipmi-dev, libglib2.0-dev, libnotify-dev, libesmtp-dev, libpq-dev
+Build-Depends: debhelper (>= 5), dpkg-dev (>= 1.14.10), po-debconf, dpatch, bison, flex, autotools-dev, pkg-config, linux-libc-dev (>= 2.6.25-4) | linux-libc-dev (<< 2.6.25-1), libcurl4-gnutls-dev (>= 7.18.2-5) | libcurl4-gnutls-dev (<= 7.18.2-1) | libcurl3-gnutls-dev, libmysqlclient15-dev, librrd-dev | librrd2-dev, libsensors-dev, liboping-dev (>= 0.3.3), libpcap0.8-dev | libpcap-dev, libupsclient1-dev, libperl-dev, iproute-dev [!alpha !amd64 !hppa !ia64 !ppc64 !mips !mipsel], libsnmp-dev | libsnmp9-dev, libvirt-dev (>= 0.4.0-6) [amd64 i386 powerpc], libxml2-dev, libhal-dev, libopenipmi-dev (>= 2.0.14-1~), libglib2.0-dev, libnotify-dev, libesmtp-dev, libpq-dev, libdbi0-dev
 Build-Conflicts: libpthread-dev, iptables-dev
 Standards-Version: 3.8.1
 Homepage: http://collectd.org/
@@ -44,6 +44,7 @@ Description: statistics collection and monitoring daemon
    * CPU frequency: cpufreq
    * output to comma separated values (CSV) files: csv
    * parse statistics from websites: curl
+   * query data from a relational database: dbi
    * disk space usage: df
    * disk and partition throughput: disk
    * DNS traffic information: dns
