@@ -1,8 +1,11 @@
 collectd (4.6.3-1~bpo50+1) lenny-backports; urgency=low
 
   * Rebuild for lenny-backports.
+  * Remaining changes:
+    - Build-conflict with iptables-dev to force the use of the shipped libiptc
+      (this allows building the iptables plugin on all architectures).
 
- -- Sebastian Harl <tokkee@debian.org>  Sun, 14 Jun 2009 16:20:23 +0200
+ -- Sebastian Harl <tokkee@debian.org>  Sun, 14 Jun 2009 17:06:37 +0200
 
 collectd (4.6.3-1~bpo40+1) etch-backports; urgency=low
 
